--- a/README.me
+++ b/README.me
@@ -1,1 +1,9 @@
 # Site Scraper
+
+## Run
+```
+  heroku scale web=0 run=1
+```
+Where "run" is an arbitrary tag mapped to a command defined in the procfile
+Need to scale web down to zero as web requires atrributes of a full server
+ie a response a path '/', a binding to a port, etc
