puppeteer working on heroku, email notification tested and succeeded, reverting to non-testing code

--- a/README.me
+++ b/README.me
@@ -7,3 +7,7 @@
 Where "run" is an arbitrary tag mapped to a command defined in the procfile
 Need to scale web down to zero as web requires atrributes of a full server
 ie a response a path '/', a binding to a port, etc
+https://devcenter.heroku.com/articles/nodejs-support#default-web-process-type
+
+Running puppeteer on heroku
+https://stackoverflow.com/questions/52225461/puppeteer-unable-to-run-on-heroku
